--- a/index.ipynb
+++ b/index.ipynb
@@ -1355,7 +1355,7 @@
    "outputs": [],
    "source": [
     "def derivative_function_trace(terms, x_values):\n",
-    "    derivative v\n",
+    "    derivative_values = list(map)\n",
     "    pass"
    ]
   },
