--- a/index.ipynb
+++ b/index.ipynb
@@ -1355,7 +1355,7 @@
    "outputs": [],
    "source": [
     "def derivative_function_trace(terms, x_values):\n",
-    "    derivative_values = derivative_at(terms, x_values)\n",
+    "    derivative_values = f\n",
     "    pass"
    ]
   },
