--- a/index.ipynb
+++ b/index.ipynb
@@ -1355,8 +1355,8 @@
    "outputs": [],
    "source": [
     "def derivative_function_trace(terms, x_values):\n",
-    "    derivative_values = list(map(lambda x: find_derivative(terms), x_values\n",
-    "    \n",
+    "    derivative_values = list(map(lambda x: find_derivative(terms), x_values))\n",
+    "    return\n",
     "    pass"
    ]
   },
