--- a/index.ipynb
+++ b/index.ipynb
@@ -1356,7 +1356,7 @@
    "source": [
     "def derivative_function_trace(terms, x_values):\n",
     "    derivative_values = list(map(lambda x: find_derivative(terms), x_values))\n",
-    "    return trace_values(x_values, )\n",
+    "    return trace_values(x_values, derivative_values )\n",
     "    pass"
    ]
   },
