--- a/index.ipynb
+++ b/index.ipynb
@@ -1355,7 +1355,7 @@
    "outputs": [],
    "source": [
     "def derivative_function_trace(terms, x_values):\n",
-    "    derivative_values = list(map(lambda term: (terms), x_values))\n",
+    "    derivative_values = list(map(lambda term: derivative_at(terms), x_values))\n",
     "    return trace_values(x_values, derivative_values, mode = 'line' )\n",
     "    pass"
    ]
