Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1357,7 +1357,11 @@
     "def derivative_function_trace(terms, x_values):\n",
     "    derivative_values = list(map(lambda term: derivative_at(terms, x_value), x_values))\n",
     "    return trace_values(x_values, derivative_values, mode = 'line' )\n",
-    "    pass"
+    "    pass\n",
+    "\n",
+    "def derivative_function_trace(terms, x_values):\n",
+    "    derivative_terms = find_derivative(terms)\n",
+    "    return function_values_trace(derivative_terms, x_values)"
    ]
   },
   {
