--- a/index.ipynb
+++ b/index.ipynb
@@ -1355,7 +1355,8 @@
    "outputs": [],
    "source": [
     "def derivative_function_trace(terms, x_values):\n",
-    "    fufind_derivative(terms)\n",
+    "    function_values = find_derivative(terms)\n",
+    "    \n",
     "    pass"
    ]
   },
