--- a/index.ipynb
+++ b/index.ipynb
@@ -1355,7 +1355,7 @@
    "outputs": [],
    "source": [
     "def derivative_function_trace(terms, x_values):\n",
-    "    function_values = find_derivative(terms)\n",
+    "    list_of_terms = find_derivative(terms)\n",
     "    \n",
     "    pass"
    ]
