--- a/index.ipynb
+++ b/index.ipynb
@@ -1356,7 +1356,7 @@
    "source": [
     "def derivative_function_trace(terms, x_values):\n",
     "    list_of_terms = find_derivative(terms)\n",
-    "    \n",
+    "    return function_values_trace()\n",
     "    pass"
    ]
   },
