--- a/index.ipynb
+++ b/index.ipynb
@@ -1350,19 +1350,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "def derivative_function_trace(terms, x_values):\n",
     "    list_of_terms = find_derivative(terms)\n",
-    "    return function_values_trace()\n",
+    "    return function_values_trace(list_of_terms, x_values)\n",
     "    pass"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1371,7 +1371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1384,7 +1384,7 @@
        " 'text': []}"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
